--- a/MechJeb2/packages.config
+++ b/MechJeb2/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="alglib.net" version="3.18.2" targetFramework="net48" />
   <package id="IDisposableAnalyzers" version="4.0.1" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Microsoft.Net.Compilers.Toolset" version="4.0.1" targetFramework="net48" developmentDependency="true" />
   <package id="SonarAnalyzer.CSharp" version="8.35.0.42613" targetFramework="net48" developmentDependency="true" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
