--- a/MechJeb2/MechJeb2.csproj
+++ b/MechJeb2/MechJeb2.csproj
@@ -104,7 +104,6 @@
     <Compile Include="MathJ\Event.cs" />
     <Compile Include="MathJ\DormandPrince.cs" />
     <Compile Include="MathJ\Functions.cs" />
-    <Compile Include="MathJ\ObjectPool.cs" />
     <Compile Include="MathJ\ODE.cs" />
     <Compile Include="MathJ\ODESolver.cs" />
     <Compile Include="Matrix3x3d.cs" />
@@ -114,6 +113,8 @@
     <Compile Include="MechJebLib\Maths\BrentRoot.cs" />
     <Compile Include="MechJebLib\Maths\Gooding.cs" />
     <Compile Include="MechJebLib\Maths\Shepperd.cs" />
+    <Compile Include="MechJebLib\Utils\Check.cs" />
+    <Compile Include="MechJebLib\Utils\ObjectPool.cs" />
     <Compile Include="MechJebLib\Utils\Statics.cs" />
     <Compile Include="MechJebLib\Utils\Utils.cs" />
     <Compile Include="MechJebModuleAirplaneAutopilot.cs" />
