Clean up TimeToPlane (fix reverse planetary rotations and poles)
- Cleans up TimeToPlane based on #1551.
- Adds reasonably thorough tests around all the different edge conditions.
- Fixes behavior for planets rotating backwards.
- Fixes behavior at the exact poles just 'cuz it was there to be fixed.
- The use of SafeAcos eliminated a lot of the special handling of lat<inc.
- I changed the handling of reverse planetary rotations to keep the values positive,
  which just makes it more readable for my own brain... might just be me.

This change should not fix any in-game breakage on planets that
RSS/RO/PVG users have reported.  It just lays a bit more solid and
readable foundations for the underlying math.

Signed-off-by: Lamont Granquist <lamont@scriptkiddie.org>

--- a/MechJeb2/MechJeb2.csproj
+++ b/MechJeb2/MechJeb2.csproj
@@ -111,6 +111,7 @@
     <Compile Include="MechJebCore.cs" />
     <Compile Include="MechJebLib\Maths\BrentMin.cs" />
     <Compile Include="MechJebLib\Maths\BrentRoot.cs" />
+    <Compile Include="MechJebLib\Maths\Functions.cs" />
     <Compile Include="MechJebLib\Maths\Gooding.cs" />
     <Compile Include="MechJebLib\Maths\Shepperd.cs" />
     <Compile Include="MechJebLib\Utils\Check.cs" />
