Much more work on MJLib
Biggest change here is probably the rewrite of the hermite
interpolating polynomials used by the ODE solver, and conversion
of the double[] arrays to List<double> which allows removing the
dep on System.Buffers.

Signed-off-by: Lamont Granquist <lamont@scriptkiddie.org>

--- a/MechJeb2/MechJeb2.csproj
+++ b/MechJeb2/MechJeb2.csproj
@@ -98,12 +98,8 @@
     <Compile Include="Maneuver\TimeSelector.cs" />
     <Compile Include="Maneuver\TransferCalculator.cs" />
     <Compile Include="MathExtensions.cs" />
-    <Compile Include="MathJ\AVL.cs" />
-    <Compile Include="MathJ\CN.cs" />
-    <Compile Include="MathJ\Curve.cs" />
     <Compile Include="MathJ\Event.cs" />
     <Compile Include="MathJ\DormandPrince.cs" />
-    <Compile Include="MathJ\Functions.cs" />
     <Compile Include="MathJ\ODE.cs" />
     <Compile Include="MathJ\ODESolver.cs" />
     <Compile Include="Matrix3x3d.cs" />
@@ -114,10 +110,14 @@
     <Compile Include="MechJebLib\Maths\Functions.cs" />
     <Compile Include="MechJebLib\Maths\Gooding.cs" />
     <Compile Include="MechJebLib\Maths\Shepperd.cs" />
+    <Compile Include="MechJebLib\Structs\H1.cs" />
+    <Compile Include="MechJebLib\Structs\H3.cs" />
+    <Compile Include="MechJebLib\Structs\HBase.cs" />
+    <Compile Include="MechJebLib\Structs\Hn.cs" />
     <Compile Include="MechJebLib\Utils\Check.cs" />
     <Compile Include="MechJebLib\Utils\ObjectPool.cs" />
     <Compile Include="MechJebLib\Utils\Statics.cs" />
-    <Compile Include="MechJebLib\Utils\Utils.cs" />
+    <Compile Include="MechJebLib\Utils\DoublePool.cs" />
     <Compile Include="MechJebModuleAirplaneAutopilot.cs" />
     <Compile Include="MechJebModuleAirplaneGuidance.cs" />
     <Compile Include="MechJebModuleAscentAutopilot.cs" />
