--- a/MechJebLibTest/MechJebLibTest.csproj
+++ b/MechJebLibTest/MechJebLibTest.csproj
@@ -35,6 +35,9 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\..\..\..\Library\Application Support\Steam\steamapps\common\Kerbal Space Program\KSP.app\Contents\Resources\Data\Managed\Assembly-CSharp.dll</HintPath>
+        </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
@@ -54,9 +57,11 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="AssertionExtensions.cs" />
-        <Compile Include="BrentRootTests.cs" />
+        <Compile Include="Maths\DormandPrinceTests.cs" />
         <Compile Include="Maths\FunctionsTests.cs" />
+        <Compile Include="Maths\BrentRootTests.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Structs\HTests.cs" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\MechJeb2\MechJeb2.csproj">
@@ -64,8 +69,11 @@
         <Name>MechJeb2</Name>
       </ProjectReference>
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Utils" />
+    </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-    <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+    <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
          Other similar extension points exist, see Microsoft.Common.targets.
     <Target Name="BeforeBuild">
     </Target>
