--- a/MechJeb2/MechJeb2.csproj
+++ b/MechJeb2/MechJeb2.csproj
@@ -101,22 +101,49 @@
     <Compile Include="MathJ\DormandPrince.cs" />
     <Compile Include="MathJ\ODE.cs" />
     <Compile Include="MathJ\ODESolver.cs" />
-    <Compile Include="Matrix3x3d.cs" />
     <Compile Include="MechJebAR202.cs" />
     <Compile Include="MechJebCore.cs" />
     <Compile Include="MechJebLib\Maths\BrentMin.cs" />
     <Compile Include="MechJebLib\Maths\BrentRoot.cs" />
+    <Compile Include="MechJebLib\Maths\FunctionImpls\RealDeltaVToChangeApoapsisPrograde.cs" />
     <Compile Include="MechJebLib\Maths\Functions.cs" />
     <Compile Include="MechJebLib\Maths\Gooding.cs" />
     <Compile Include="MechJebLib\Maths\Shepperd.cs" />
-    <Compile Include="MechJebLib\Structs\H1.cs" />
-    <Compile Include="MechJebLib\Structs\H3.cs" />
-    <Compile Include="MechJebLib\Structs\HBase.cs" />
-    <Compile Include="MechJebLib\Structs\Hn.cs" />
+    <Compile Include="MechJebLib\Primitives\DD.cs" />
+    <Compile Include="MechJebLib\PVG\ArrayWrapper.cs" />
+    <Compile Include="MechJebLib\PVG\AscentBuilder.cs" />
+    <Compile Include="MechJebLib\PVG\Integrators\IPVGIntegrator.cs" />
+    <Compile Include="MechJebLib\PVG\Integrators\VacuumCoastIntegrator.cs" />
+    <Compile Include="MechJebLib\PVG\Integrators\VacuumThrustAnalytic.cs" />
+    <Compile Include="MechJebLib\PVG\Integrators\VacuumThrustIntegrator.cs" />
+    <Compile Include="MechJebLib\PVG\Ascent.cs" />
+    <Compile Include="MechJebLib\PVG\Phase.cs" />
+    <Compile Include="MechJebLib\PVG\Problem.cs" />
+    <Compile Include="MechJebLib\PVG\PVGBuilder.cs" />
+    <Compile Include="MechJebLib\PVG\ResidualWrapper.cs" />
+    <Compile Include="MechJebLib\PVG\Scale.cs" />
+    <Compile Include="MechJebLib\PVG\Solution.cs" />
+    <Compile Include="MechJebLib\PVG\Optimizer.cs" />
+    <Compile Include="MechJebLib\PVG\Terminal\FlightPathAngle3Energy.cs" />
+    <Compile Include="MechJebLib\PVG\Terminal\FlightPathAngle4Energy.cs" />
+    <Compile Include="MechJebLib\PVG\Terminal\FlightPathAngle4Reduced.cs" />
+    <Compile Include="MechJebLib\PVG\Terminal\FlightPathAngle4Propellant.cs" />
+    <Compile Include="MechJebLib\PVG\Terminal\FlightPathAngle5Reduced.cs" />
+    <Compile Include="MechJebLib\PVG\Terminal\Intercept6Cartesian.cs" />
+    <Compile Include="MechJebLib\PVG\Terminal\IPVGTerminal.cs" />
+    <Compile Include="MechJebLib\Primitives\H1.cs" />
+    <Compile Include="MechJebLib\Primitives\H3.cs" />
+    <Compile Include="MechJebLib\Primitives\HBase.cs" />
+    <Compile Include="MechJebLib\Primitives\Hn.cs" />
+    <Compile Include="MechJebLib\Primitives\M3.cs" />
+    <Compile Include="MechJebLib\Primitives\Q3.cs" />
+    <Compile Include="MechJebLib\Primitives\V3.cs" />
+    <Compile Include="MechJebLib\PVG\Terminal\Kepler3Reduced.cs" />
+    <Compile Include="MechJebLib\PVG\Terminal\Kepler4Reduced.cs" />
+    <Compile Include="MechJebLib\PVG\Terminal\Kepler5Reduced.cs" />
     <Compile Include="MechJebLib\Utils\Check.cs" />
     <Compile Include="MechJebLib\Utils\ObjectPool.cs" />
     <Compile Include="MechJebLib\Utils\Statics.cs" />
-    <Compile Include="MechJebLib\Utils\DDArray.cs" />
     <Compile Include="MechJebModuleAirplaneAutopilot.cs" />
     <Compile Include="MechJebModuleAirplaneGuidance.cs" />
     <Compile Include="MechJebModuleAscentAutopilot.cs" />
@@ -140,7 +167,6 @@
     <Compile Include="MechJebModuleLandingAutopilot.cs" />
     <Compile Include="MechJebModuleLandingGuidance.cs" />
     <Compile Include="MechJebModuleLandingPredictions.cs" />
-    <Compile Include="MechJebModuleLogicalStageTracking.cs" />
     <Compile Include="MechJebModuleManeuverPlanner.cs" />
     <Compile Include="MechJebModuleMenu.cs" />
     <Compile Include="MechJebModuleNodeEditor.cs" />
@@ -179,13 +205,9 @@
     <Compile Include="OrbitalManeuverCalculator.cs" />
     <Compile Include="PIDController.cs" />
     <Compile Include="PartExtensions.cs" />
-    <Compile Include="Pontryagin\Arc.cs" />
-    <Compile Include="Pontryagin\PontryaginBase.cs" />
-    <Compile Include="Pontryagin\PontryaginLaunch.cs" />
-    <Compile Include="Pontryagin\PontryaginNode.cs" />
-    <Compile Include="Pontryagin\Solution.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs" />
+    <Compile Include="MechJebModulePVGGlueBall.cs" />
     <Compile Include="RCSSolver.cs" />
     <Compile Include="ReentrySimulation.cs" />
     <Compile Include="ReflectionUtils.cs" />
