Updated Russian localization, added new keys, fixed old

--- a/Localization/ru.cfg
+++ b/Localization/ru.cfg
@@ -104,6 +104,7 @@ Localization
 
         #MechJeb_adv_reset_button = Сброс
         #MechJeb_adv_captureburn = включать зажигание захвата
+		#MechJeb_adv_periapsis = Перицентр
         #MechJeb_adv_label1 = сейчас, в любое время
         #MechJeb_adv_label2 = Выбор:
         #MechJeb_adv_label3 = Отправление в
@@ -260,6 +261,8 @@ Localization
         #MechJeb_ApproAndLand_label11 = Высота цели: <<1>> м
         #MechJeb_ApproAndLand_label12 = Вертикальная скорость цели: <<1>> м/с
         #MechJeb_ApproAndLand_label13 = Курс цели: <<1>>º
+		#MechJeb_ApproAndLand_label14 = Наклон планирования:
+        #MechJeb_ApproAndLand_MaxRateOfDescent = Макс. скорость спуска:
 
         #MechJeb_ApproAndLand_approachState1 = Направляется к точке начального сближения
         #MechJeb_ApproAndLand_approachState2 = Направляется к точке конечного сближения
@@ -315,19 +318,19 @@ Localization
         #MecgJeb_Aircraftauto_error2 = Ошибка:<<1>> Цель:<<2>> Тек.:<<3>> PID: <<4>>
 
         #MechJeb_Aircraftauto_Label10 = Крен
-        #MechJeb_Aircraftauto_Pitch = Pitch
+        #MechJeb_Aircraftauto_Pitch = Наклон
 
-        #MechJeb_Aircraftauto_Limits = Limits:
-        #MechJeb_Aircraftauto_RollLimit = Roll
-        #MechJeb_Aircraftauto_YawLimit = Yaw
-        #MechJeb_Aircraftauto_PitchUpLimit = Pitch up
-        #MechJeb_Aircraftauto_PitchDownLimit = Pitch down
+        #MechJeb_Aircraftauto_Limits = Ограничения:
+        #MechJeb_Aircraftauto_RollLimit = Крен
+        #MechJeb_Aircraftauto_YawLimit = Рысканье
+        #MechJeb_Aircraftauto_PitchUpLimit = Наклон вверх
+        #MechJeb_Aircraftauto_PitchDownLimit = Наклон вниз
 
     //Ascent Guidance
         #MechJeb_Ascent_title = Помощник подъема
         #MechJeb_Ascent_ascentPathList1 = Классический профиль подъема
-        #MechJeb_Ascent_ascentPathList2 = Stock-style GravityTurn™
-        #MechJeb_Ascent_ascentPathList3 = Primer Vector Guidance (RSS/RO)
+        #MechJeb_Ascent_ascentPathList2 = Стоковый GravityTurn™
+        #MechJeb_Ascent_ascentPathList3 = Наведение вектора праймера (RSS/RO)
 
         #MechJeb_Ascent_status1 = Предзапуск
         #MechJeb_Ascent_status2 = Выключен
@@ -344,7 +347,6 @@ Localization
         #MechJeb_Ascent_status13 = Гравитационный поворот
         #MechJeb_Ascent_status14 = Движение к границе атмосферы
         #MechJeb_Ascent_status15 = Удержание Ап
-
 
         #MechJeb_NavBallGuidance_btn1 = Скрыть помощь подъема на нависфере
         #MechJeb_NavBallGuidance_btn2 = Показать помощь подъема на нависфере
@@ -366,6 +368,8 @@ Localization
         #MechJeb_Ascent_button15 = Запуск в плоскость цели
         #MechJeb_Ascent_button16 = Запуск в стартовое окно
         #MechJeb_Ascent_button17 = Отмена
+		#MechJeb_Ascent_LaunchToTargetLan = Запуск к ДВУ цели
+        #MechJeb_Ascent_LaunchToLan = Запуск к ДВУ
 
         #MechJeb_Ascent_label1 = Перицентр цели:
         #MechJeb_Ascent_label2 = Апоцентр цели:
@@ -404,9 +408,10 @@ Localization
         #MechJeb_Ascent_label35 = Статус автопилота:
         #MechJeb_Ascent_label36 = УПРАВЛЕНИЕ ОТКЛЮЧЕНО (АВИОНИКА)
         #MechJeb_Ascent_label37 = Предупреждение: МехДжеб не может округлить орбиту без улучшеного Центра Слежения.
-        #MechJeb_Ascent_attachAlt = Attach Altitude:
-        #MechJeb_Ascent_warnAttachAltLow = Attach < Pe: periapsis insertion
-        #MechJeb_Ascent_warnAttachAltHigh = Attach > Ap: apoapsis insertion
+        #MechJeb_Ascent_attachAlt = Прикрепить высоту:
+        #MechJeb_Ascent_warnAttachAltLow = Прикрепление < Пе: включение перицентра
+        #MechJeb_Ascent_warnAttachAltHigh = Прикрепление > Ап: включение апоцентра
+
 
         #MechJeb_Ascent_checkbox1 = Пропуск спуска под уклоном
         #MechJeb_Ascent_checkbox2 = Форсировать крен
@@ -419,10 +424,11 @@ Localization
         #MechJeb_Ascent_checkbox9 = Пропустить округление орбиты
         #MechJeb_Ascent_checkbox10 = Редактировать путь подъема
 
-
         #MechJeb_Ascent_msg1 = Запуск в межпланетное стартовое окно
         #MechJeb_Ascent_msg2 = Запуск в плоскость цели
         #MechJeb_Ascent_msg3 = Запуск в цель
+		#MechJeb_Ascent_LaunchingToTargetLAN = Запускается к ДВУ цели
+        #MechJeb_Ascent_LaunchingToManualLAN = Запускается к пользов. ДВУ
 
     //Attitude Adjustment
     //CoM->Center of Mass CoL->Center of lift CoT->Center of thrust
@@ -499,7 +505,7 @@ Localization
 
         #MechJeb_WindowEd_CustomInfoWindow_Label1 = Добавьте элементы в это окно с помощью редактора окон.
         #MechJeb_WindowEd_CustomInfoWindow_Scrmsg1 = Конфигурация окна <<1>> скопирована в буфер обмена.
-        #MechJeb_WindowEd_CustomInfoWindow_Scrmsg2 = Вставленый текст не является корректным дескриптором окна МехДжеб.
+        #MechJeb_WindowEd_CustomInfoWindow_Scrmsg2 = Вставленый текст не является корректным дескриптором окна MechJeb.
 
     //Docking Autopilot
         #MechJeb_Docking_title = Автопилот стыковки
@@ -573,9 +579,9 @@ Localization
         #MechJeb_Flightrecord_checkbox26 = ОУА
         #MechJeb_Flightrecord_checkbox27 = Рыск
         #MechJeb_Flightrecord_checkbox28 = Танг
-        #MechJeb_Flightrecord_checkbox29 = ГравПот
-        #MechJeb_Flightrecord_checkbox30 = ПотСопр
-        #MechJeb_Flightrecord_checkbox31 = ПотРул
+        #MechJeb_Flightrecord_checkbox29 = Потеря грав.
+        #MechJeb_Flightrecord_checkbox30 = Потеря сопр.
+        #MechJeb_Flightrecord_checkbox31 = Потеря руль.
 
         #MechJeb_Flightrecord_Label1 = Время <<1>>
         #MechJeb_Flightrecord_Label2 = Раст. старта <<1>>
@@ -607,6 +613,7 @@ Localization
         #MechJeb_NodeEd_button4 = Выполнить следующую точку
         #MechJeb_NodeEd_button5 = Выполнить все точки
         #MechJeb_NodeEd_button6 = Отменить выполнение точек
+		#MechJeb_NodeEd_button7 = Выполнить следующий узел Principia
 
         #MechJeb_NodeEd_checkbox1 = Авто-ускорение времени
 
@@ -634,6 +641,7 @@ Localization
         #MechJeb_RZauto_label5 = Макс. число промежут. орбита:
         #MechJeb_RZauto_label6 = Макс. число промежут. орбит должно быть как минимум 5.
         #MechJeb_RZauto_label7 = Статус: <<1>>
+        #MechJeb_RZauto_label8 = Макс. скорость сближения:
 
         #MechJeb_RZauto_checkbox1 = Авто-ускорение времени
 
@@ -701,7 +709,7 @@ Localization
 
         #MechJeb_ScriptMod_button1 = ▶ ЗАПУСК
         #MechJeb_ScriptMod_button2 = ☇ Сброс
-        #MechJeb_ScriptMod_button3 = ■ ОСТАНОВКА
+        #MechJeb_ScriptMod_button3 = ■ ОСТАНОВИТЬ
         #MechJeb_ScriptMod_button4 = ▼ Полный GUI
         #MechJeb_ScriptMod_button5 = △ Компактный GUI
         #MechJeb_ScriptMod_button6 = Очистить все
@@ -771,9 +779,9 @@ Localization
         #MechJeb_Settings_button4 = Использовать компактный скин MJ2
 
     //Smart A.S.S. or Smart A.C.S.
-        #MechJeb_SmartASS_title = Умный С.А.С.
+        #MechJeb_SmartASS_title = Smart A.S.S.™
 
-        #MechJeb_SmartACS_title = Smart A.C.S.
+        #MechJeb_SmartACS_title = Smart A.C.S.™
 
         #MechJeb_SmartASS_button1 = ОРБТ
         #MechJeb_SmartASS_button2 = ПОВ
@@ -916,7 +924,7 @@ Localization
 
     //Translatron
 
-        #MechJeb_Translatron_title = Translatron
+        #MechJeb_Translatron_title = Translatron™
         #MechJeb_Translatron_off = ВЫКЛ
         #MechJeb_Translatron_KEEP_OBT = ДЕРЖ\nОРБТ
         #MechJeb_Translatron_KEEP_SURF = ДЕРЖ\nПОВР
@@ -1018,6 +1026,7 @@ Localization
         #MechJeb_InfoItems_StatsColumn10 = Атм ΔV
         #MechJeb_InfoItems_StatsColumn11 = Вак ΔV
         #MechJeb_InfoItems_StatsColumn12 = Время
+        #MechJeb_InfoItems_StatsColumn13 = Макс. тяга
 
 
     //Ascent Path Editor
@@ -1087,7 +1096,7 @@ Localization
         #MechJeb_Actiongroup_label1 = Переключить группу действий
 
         #MechJeb_Ascent_hotStaging = Поддержка горячих ступеней
-        #MechJeb_Ascent_dropSolids = Drop solids early
+        #MechJeb_Ascent_dropSolids = Ранний сброс твердотопливных
         #MechJeb_Ascent_label38 = Сброс обтекателя при:
         #MechJeb_Ascent_label39 = динамическом давлении
         #MechJeb_Ascent_label40 = высоте
@@ -1152,7 +1161,6 @@ Localization
         #MechJeb_MaxAcceleration = Макс. ускорение
         #MechJeb_MinAcceleration = Мин. ускорение
         #MechJeb_Gforce = Перегрузка
-        #MechJeb_DragCoefficient = Коэфф. сопротивления
         #MechJeb_PartCount = Кол-во частей
         #MechJeb_MaxPartCount = Макс. кол-во частей
         #MechJeb_PartCountDivideMaxParts = Кол-во частей / Макс. кол-во частей
@@ -1204,7 +1212,7 @@ Localization
         #MechJeb_SteeringError = Ошибка рулежки
         #MechJeb_MarkUT = Отметить АСТвр
         #MechJeb_TimeSinceMark = Время начиная с отметки
-        #MechJeb_DVExpended = ΔV expended
+        #MechJeb_DVExpended = Израсходовано ΔV
         #MechJeb_DragLosses = Потери сопротивления
         #MechJeb_GravityLosses = Гравит. потери
         #MechJeb_SteeringLosses = Потери рулежки
@@ -1221,16 +1229,16 @@ Localization
         #MechJeb_ChuteMultiplier = Множитель парашутов: <<1>>
         #MechJeb_MultiplierQuality = \nКачество множителя: <<1>>%
         #MechJeb_Usingpredictions = \nИспользуются предсказания <<1>>
-        #MechJeb_SimDragScalar = Sim Drag Scalar
-        #MechJeb_SimLiftScalar = Sim Lift Scalar
-        #MechJeb_SimDynaPressPa = Sim DynaPressPa
-        #MechJeb_SimsimMach = Sim simMach
-        #MechJeb_SimSpdOfSnd = Sim SpdOfSnd
-        #MechJeb_LandingSim = LandingSim
+        #MechJeb_SimDragScalar = Скаляр сим. сопрот.
+        #MechJeb_SimLiftScalar = Скаляр сим. подъема
+        #MechJeb_SimDynaPressPa = Сим. DynaPressPa
+        #MechJeb_SimsimMach = Сим. ск. махов.
+        #MechJeb_SimSpdOfSnd = Сим. Скор. Звука
+        #MechJeb_LandingSim = Сим. посадки
         #MechJeb_DVincludecosinelosses = ΔV включает косинусальные потери
         #MechJeb_NodeBurnLength = Длина зажигания в узле
         #MechJeb_NodeBurnCountdown = Отсчет зажигания в узле
-        #MechJeb_SpeedIntAcc = Speed Int Acc
+        #MechJeb_SpeedIntAcc = Скорость начал. ускор.
         #MechJeb_Traction = Сцепление
         #MechJeb_Headingerror = Ошибка курса
         #MechJeb_Speederror = Ошибка скорости
@@ -1332,7 +1340,6 @@ Localization
         #MechJeb_PreventUnstableIgnition = Предотвратить нестабильное зажигание
         #MechJeb_UseRCStoullage = Использовать РСУ при нехватке
         #MechJeb_ManageAirIntakes = Управлять воздухозаборниками
-        #MechJeb_LimitAcceleration = Ограничить ускорение
         #MechJeb_LimitThrottle = Ограничить тягу
         #MechJeb_LowerThrottleLimit = Уменьшить лимит тяги
         #MechJeb_DifferentialThrottle = Дифференциальная тяга
@@ -1417,14 +1424,16 @@ Localization
         #MechJeb_AnatidRobotics_Multiversal = Анатид Робототехника / Мультиверсальная Мехатроника
         #MechJeb_MechanicalJeb2_Title = Механический Джеб - Блок версии 2.0
         #MechJeb_MechanicalJeb2_Description = После многих лет, потраченных на исследование, наши ученые все еще не могут объяснить почему Джебедая Керман настолько хорош в пилотировании, так что мы решили сделать мехническую копию его мозга для помощи в пилотировании наших кораблей. Это версия беспилотного блока МехДжеба разработана для сохранения жизни бравых Кербонавтов, вызвавшихся тестировать новые сборки. 
-        #MechJeb_MechJeb2_Title = МехДжеб 2 (корпус AR202)
+        #MechJeb_MechJeb2_Title = MechJeb 2 (корпус AR202)
         #MechJeb_MechJeb2_Description = Укрепленная версия нейронных плат МехДжеба в корпусе для радиального крепления.
-        #MechJeb_Future_ManeuverTranslatron_Title = МехДжеб Оборудование - Маневры и Translatron
-        #MechJeb_Future_ManeuverTranslatron_Description = Разблокирование следующих окон МехДжеб: Планировщик маневров, Translatron, Помощник ускорения времени, Регулировка ориентации, окно Тяги, Балансировщик РСУ. После разблокировки все существующие модули МехДжеб автоматически обновляются до последней прошивки.
-        #MechJeb_Future_RoverAutopilot_Title = МехДжеб Оборудование - Автопилот вездехода
-        #MechJeb_Future_RoverAutopilot_Description = Разблокирование следующих окон МехДжеб: Автопилот вездехода. После разблокировки все существующие модули МехДжеб автоматически обновляются до последней прошивки.
-        #MechJeb_Future_RendevousDocking_Title = МехДжеб Оборудование - Сближение и Стыковка
-        #MechJeb_Future_RendevousDocking_Description = Разблокирование следующих окон МехДжеб: Планировщик сближения, Автопилот сближения, Автопилот стыковки. После разблокировки все существующие модули МехДжеб автоматически обновляются до последней прошивки.
+        #MechJeb_Future_ManeuverTranslatron_Title = Возможности MechJeb - Маневры и Translatron
+        #MechJeb_Future_ManeuverTranslatron_Description = Разблокирует следующие окна MechJeb: Планировщик маневров, Translatron, Помощник ускорения времени, Регулировка ориентации, окно Тяги, Балансировщик РСУ. После разблокировки все существующие модули MechJeb автоматически обновляются до последней прошивки.
+        #MechJeb_Future_RoverAutopilot_Title = Возможности MechJeb - Автопилот вездехода
+        #MechJeb_Future_RoverAutopilot_Description = Разблокирует следующие окна MechJeb: Автопилот вездехода. После разблокировки все существующие модули MechJeb автоматически обновляются до последней прошивки.
+        #MechJeb_Future_RendevousDocking_Title = Возможности MechJeb - Сближение и Стыковка
+        #MechJeb_Future_RendevousDocking_Description = Разблокирует следующие окна MechJeb: Планировщик сближения, Автопилот сближения, Автопилот стыковки. После разблокировки все существующие модули MechJeb автоматически обновляются до последней прошивки.
+        #MechJeb_Future_AscentLandingSpaceplane_Title = Возможности MechJeb - Подъем, Посадка, Космический самолет
+        #MechJeb_Future_AscentLandingSpaceplane_Description = Разблокирует следующие окна MechJeb: Автопилот подъема, Автопилот посадки, Управление космическим самолетом. После разблокировки все существующие модули MechJeb автоматически обновляются до последней прошивки.
 
 
     }
