--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -1430,6 +1430,7 @@ Localization
         #MechJeb_Future_AscentLandingSpaceplane_Title = MechJeb Features - Ascent, Landing, Spaceplane
         #MechJeb_Future_AscentLandingSpaceplane_Description = Unlocks the following MechJeb windows: Ascent Autopilot, Landing Autopilot, Spaceplane Guidance. Once unlocked, all existing MechJeb modules will be automatically upgraded to latest firmware.
 
+        #MechJeb_RESOURCE_MJPropellant = MJPropellant
 
     }
 }
