--- a/Parts/MechJeb2_Pod/part.cfg
+++ b/Parts/MechJeb2_Pod/part.cfg
@@ -1,6 +1,7 @@
 RESOURCE_DEFINITION
 {
   name = MJPropellant
+  displayName = #MechJeb_RESOURCE_MJPropellant
   density = 0.004
   flowMode = NO_FLOW
   transfer = NONE
