--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -1179,8 +1179,8 @@ Localization
         #MechJeb_TargetOrbitSpeed = Target orbit speed
         #MechJeb_TargetTimeToAp = Target time to Ap
         #MechJeb_TargetTimeToPe = Target time to Pe
-        #MechJeb_TargetTimeToEquatorialAN = Target time to equatorial AN
-        #MechJeb_TargetTimeToEquatorialDN = Target time to equatorial DN
+        #MechJeb_TargetTimeToEquatorialAN = Target time to eq. AN
+        #MechJeb_TargetTimeToEquatorialDN = Target time to eq. DN
         #MechJeb_TargetMeanAnomaly = Target mean anomaly
         #MechJeb_TargetLAN = Target long. of ascending node
         #MechJeb_TargetAoP = Target argument of periapsis
