update french translation

--- a/Localization/fr-fr.cfg
+++ b/Localization/fr-fr.cfg
@@ -1179,8 +1179,8 @@ Localization
         #MechJeb_TargetOrbitSpeed = Vitesse orbitale cible
         #MechJeb_TargetTimeToAp = Temps avant Ap ciblé
         #MechJeb_TargetTimeToPe = Temps avant Pe ciblé
-        #MechJeb_TargetTimeToEquatorialAN = Temps avant NA équatorial
-        #MechJeb_TargetTimeToEquatorialDN = Temps avant ND équatorial
+        #MechJeb_TargetTimeToEquatorialAN = Temps avant NA équatorial ciblé
+        #MechJeb_TargetTimeToEquatorialDN = Temps avant ND équatorial ciblé
         #MechJeb_TargetMeanAnomaly = Anomalie moyenne de la cible
         #MechJeb_TargetLAN = NLA cible
         #MechJeb_TargetAoP = A. de Pe cible
