add Target True Longitude
very important for TLIs with Principia

--- a/Localization/fr-fr.cfg
+++ b/Localization/fr-fr.cfg
@@ -1182,6 +1182,7 @@ Localization
         #MechJeb_TargetTimeToEquatorialAN = Temps avant NA équatorial ciblé
         #MechJeb_TargetTimeToEquatorialDN = Temps avant ND équatorial ciblé
         #MechJeb_TargetMeanAnomaly = Anomalie moyenne de la cible
+        #MechJeb_TargetTrueLongitude = Longitude vraie de la cible
         #MechJeb_TargetLAN = NLA cible
         #MechJeb_TargetAoP = A. de Pe cible
         #MechJeb_TargetEccentricity = excentricité de la cible
