--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -1182,6 +1182,7 @@ Localization
         #MechJeb_TargetTimeToEquatorialAN = Target time to eq. AN
         #MechJeb_TargetTimeToEquatorialDN = Target time to eq. DN
         #MechJeb_TargetMeanAnomaly = Target mean anomaly
+        #MechJeb_TargetTrueLongitude = Target true longitude
         #MechJeb_TargetLAN = Target long. of ascending node
         #MechJeb_TargetAoP = Target argument of periapsis
         #MechJeb_TargetEccentricity = Target eccentricity
