--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -1179,11 +1179,16 @@ Localization
         #MechJeb_TargetOrbitSpeed = Target orbit speed
         #MechJeb_TargetTimeToAp = Target time to Ap
         #MechJeb_TargetTimeToPe = Target time to Pe
+        #MechJeb_TargetTimeToAN = Target time to AN
+        #MechJeb_TargetTimeToDN = Target time to DN
         #MechJeb_TargetTimeToEquatorialAN = Target time to eq. AN
         #MechJeb_TargetTimeToEquatorialDN = Target time to eq. DN
         #MechJeb_TargetMeanAnomaly = Target mean anomaly
         #MechJeb_TargetTrueLongitude = Target true longitude
         #MechJeb_TargetLAN = Target long. of ascending node
+        #MechJeb_TargetLDN = Target long. of descending node
+        #MechJeb_TargetEquatorialLAN = Target long. of eq. AN
+        #MechJeb_TargetEquatorialLDN = Target long. of eq. DN
         #MechJeb_TargetAoP = Target argument of periapsis
         #MechJeb_TargetEccentricity = Target eccentricity
         #MechJeb_TargetSMA = Target semi-major axis
@@ -1194,8 +1199,6 @@ Localization
         #MechJeb_RelativeInclination = Relative inclination
         #MechJeb_TimeToAN = Time to AN
         #MechJeb_TimeToDN = Time to DN
-        #MechJeb_TimeToEquatorialAN = Time to equatorial AN
-        #MechJeb_TimeToEquatorialDN = Time to equatorial DN
         #MechJeb_CircularOrbitSpeed = Circular orbit speed
         #MechJeb_StageDv_vac = Stage ΔV (vac)
         #MechJeb_StageDV_atmo = Stage ΔV (atmo)
