--- a/Localization/fr-fr.cfg
+++ b/Localization/fr-fr.cfg
@@ -1177,13 +1177,18 @@ Localization
         #MechJeb_TargetInclination = Inclinaison cible
         #MechJeb_TargetOrbitPeriod = Période orbitale cible
         #MechJeb_TargetOrbitSpeed = Vitesse orbitale cible
-        #MechJeb_TargetTimeToAp = Temps avant Ap ciblé
-        #MechJeb_TargetTimeToPe = Temps avant Pe ciblé
-        #MechJeb_TargetTimeToEquatorialAN = Temps avant NA équatorial ciblé
-        #MechJeb_TargetTimeToEquatorialDN = Temps avant ND équatorial ciblé
+        #MechJeb_TargetTimeToAp = Temps avant Ap de la cible
+        #MechJeb_TargetTimeToPe = Temps avant Pe de la cible
+        #MechJeb_TargetTimeToAN = Temps avant NA de la cible
+        #MechJeb_TargetTimeToDN = Temps avant ND de la cible
+        #MechJeb_TargetTimeToEquatorialAN = Temps avant NA équatorial de la cible
+        #MechJeb_TargetTimeToEquatorialDN = Temps avant ND équatorial de la cible
         #MechJeb_TargetMeanAnomaly = Anomalie moyenne de la cible
         #MechJeb_TargetTrueLongitude = Longitude vraie de la cible
-        #MechJeb_TargetLAN = NLA cible
+        #MechJeb_TargetLAN = LNA cible
+        #MechJeb_TargetLDN = LND cible
+        #MechJeb_TargetEquatorialLAN = LNA équatorial de la cible
+        #MechJeb_TargetEquatorialLDN = LND équatorial de la cible
         #MechJeb_TargetAoP = A. de Pe cible
         #MechJeb_TargetEccentricity = excentricité de la cible
         #MechJeb_TargetSMA = ASM cible
