--- a/MechJebLibTest/MechJebLibTest.csproj
+++ b/MechJebLibTest/MechJebLibTest.csproj
@@ -61,7 +61,9 @@
         <Compile Include="Maths\FunctionsTests.cs" />
         <Compile Include="Maths\BrentRootTests.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="PVG\Titan2Tests.cs" />
+        <Compile Include="PVG\AscentTests\TheStandardTests.cs" />
+        <Compile Include="PVG\AscentTests\Titan2Tests.cs" />
+        <Compile Include="PVG\Integrators\VacuumThrustIntegratorTests.cs" />
         <Compile Include="Structs\HTests.cs" />
         <Compile Include="Utils\StaticTests.cs" />
     </ItemGroup>
